--- a/Project40.vcxproj.filters
+++ b/Project40.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="Car.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CarCenter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Car.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Header.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CarCenter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
