--- a/Project40.vcxproj
+++ b/Project40.vcxproj
@@ -141,11 +141,13 @@
   <ItemGroup>
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="CarCenter.cpp" />
+    <ClCompile Include="CenterDirector.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Car.h" />
     <ClInclude Include="CarCenter.h" />
+    <ClInclude Include="CenterDirector.h" />
     <ClInclude Include="Header.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
