--- a/Project40.vcxproj.filters
+++ b/Project40.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="CenterDirector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SuperCar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Car.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CenterDirector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SuperCar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
